Band Assignment with more Details

--- a/favoriteband.html
+++ b/favoriteband.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Band name here</title>
+    <title>Peach Tree Rascals</title>
 </head>
 <body>
     <header>
-        <h1>Bandname fan page</h1>
+        <h1>Peach Tree Rascals Fan Page</h1>
     </header>
 
-    <p>words</p>
-    <p>words 2</p>
+    <p>This music group was formed not too long ago and comprises of a group of high school friends.</p>
+    <p>The band's name really got out there when their song "Mariposa" became popular on the social media
+        platform TikTok!
+    </p>
 
-    <p>Find more about them at this <a href="put url here">website.</a></p>
+    <p>Find more about them at this <a href="https://en.wikipedia.org/wiki/Peach_Tree_Rascals">website.</a></p>
 </body>
 </html>
