Final band Assignment

--- a/favoriteband.html
+++ b/favoriteband.html
@@ -17,5 +17,6 @@
     </p>
 
     <p>Find more about them at this <a href="https://en.wikipedia.org/wiki/Peach_Tree_Rascals">website.</a></p>
+    <footer>This Page was made by Luke Armijo</footer>
 </body>
 </html>
