Final Assignment band

--- a/favoriteband.html
+++ b/favoriteband.html
@@ -11,12 +11,12 @@
         <h1>Peach Tree Rascals Fan Page</h1>
     </header>
 
-    <p>This music group was formed not too long ago and is comprised of a group of high school friends.</p>
-    <p>The band's name really got out there when their song "Mariposa" became popular on the social media
-        platform TikTok!
+    <p>This music group was formed not too long ago and is comprised of a group of high school friends.
+    The band's name really got out there when their song "Mariposa" became popular on the social media
+    platform TikTok!
     </p>
 
-    <p>Find more about them at this <a href="https://en.wikipedia.org/wiki/Peach_Tree_Rascals">website.</a></p>
+    <p>Find more about them at this <a href="https://en.wikipedia.org/wiki/Peach_Tree_Rascals">wikipedia page.</a></p>
     <footer>This Page was made by Luke Armijo</footer>
 </body>
 </html>
